init ideag repo

--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,7 @@
 		<!--FIXME change to actual logo path -->
 	</head>
 	<body mol_view_root>
-		<div mol_view_root="$company_template_app"></div>
+		<div mol_view_root="$milis_ideag_app"></div>
 		<!--FIXME change to actual app name -->
 		<script src="web.js" charset="utf-8"></script>
 	</body>
